<resources>
    <string name="app_name">Notes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="time">Time</string>
    <string name="favorite_notes">Favorite notes</string>
    <string name="all_notes">All notes</string>
    <string name="notes">Notes</string>
    <string name="test_app_for_apalon">Test app for Apalon</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_body">Enter Body</string>
    <string name="create_note">Creating note</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="choose_action">Choose action..</string>
    <string name="show_photo">Show photo</string>
    <string name="add_photo_from_file_system">Add Photo \nfrom File System</string>
    <string name="make_photo_from_camera">Make Photo \nfrom Camera</string>
    <string name="change">Change</string>
    <string name="exit">Exit</string>
    <string name="change_note">Change note?</string>
    <string name="delete">Delete</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="rationale">Permissions needed to work with camera and file system</string>
    <string name="manually">Grant permissions manually in settings</string>
    <string name="was_granted">Permissions was granted</string>
    <string name="was_denied">Permissions was denied</string>
    <string name="no_photo">There is no photo..</string>
    <string name="image_type">image/*</string>
    <string name="key_id">idToChange</string>
    <string name="uri_key">uri</string>
    <string name="key_code">code</string>
    <string name="isFavorite">isFavorite</string>
    <string name="provider_pakage">com.dev.pavelharetskiy.notes_kotlin.providers</string>
    <string name="folder_name">NotesAppKotlin</string>
    <string name="format">dd.MM.yyyy HH:mm:ss</string>
    <string name="dialog_id">idtosave</string>
    <string name="note_is_deleted">Note is deleted</string>
    <string name="title_not_empty">Title shouldn\'t be empty</string>
    <string name="note_is_changed">Note is changed</string>
    <string name="nothing">Nothing</string>
    <string name="no_notes">There are no notes</string>
    <string name="new_note">New Note</string>
    <string name="instructions">Place your fingertip on the scanner to verify your identity</string>
    <string name="failed_to_init_chipper">Failed to init Cipher</string>
    <string name="support_not">Your device doesn\'t support fingerprint authentication</string>
    <string name="enable_perm_finger">Please enable the fingerprint permission</string>
    <string name="no_fingerprint_confg">No fingerprint configured. Please register at least one fingerprint in your device\'s Settings</string>
    <string name="enable_lockscreen_security">Please enable lockscreen security in your device\'s Settings</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="widget_name">Notes</string>
</resources>
