<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvDelete"
        style="@style/StatefulButtonRoundedBorder.ReverseStates"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/delete" />

    <TextView
        android:id="@+id/tvChange"
        style="@style/StatefulButtonRoundedBorder.ReverseStates"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/change" />

    <TextView
        android:id="@+id/tvExit"
        style="@style/StatefulButtonRoundedBorder.ReverseStates"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/exit" />
</LinearLayout>