<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/noteCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="10dp"
    tools:context="com.example.maria.notes.activities.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivPhoto_on_card"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="1.0" />

        <LinearLayout
            android:id="@+id/linLayTVs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            card_view:layout_constraintBottom_toTopOf="@+id/tvTime"
            card_view:layout_constraintEnd_toStartOf="@+id/iv_isFav"
            card_view:layout_constraintStart_toEndOf="@+id/ivPhoto_on_card"
            card_view:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvTitle"
                style="@style/card_view_notes_tv_style"
                android:text="@string/title"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvBody"
                style="@style/card_view_notes_tv_style"
                android:text="@string/body" />

            <TextView
                android:id="@+id/tvIdInLL"
                android:layout_width="0dp"
                android:layout_height="0dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvTime"
            style="@style/card_view_notes_tv_style"
            android:layout_width="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/time"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/iv_isFav"
            card_view:layout_constraintStart_toEndOf="@+id/ivPhoto_on_card"
            android:layout_marginLeft="8dp" />

        <ImageView
            android:id="@+id/iv_isFav"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:drawable/btn_star_big_off"
            android:contentDescription="@string/app_name"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>